--- a/responsive.css
+++ b/responsive.css
@@ -51,8 +51,8 @@ nav .fa-solid{
     }
     
     #cross{
-        font-size: 30px;
-        padding-left: 25px;
+        width:30px;
+        padding-left: 30px;
         padding-bottom: 10px;
     }
     #cross,#menu-icon:hover{
@@ -60,8 +60,12 @@ nav .fa-solid{
     }
     #menu-icon{
         margin-right: 10px;
-        font-size: 30px;
+        width: 35px;
     } 
+    #menu-icon svg{
+        
+        width: 24px;
+    }
     .navbar h1{
         font-size:25px;
     }
