--- a/style.css
+++ b/style.css
@@ -254,13 +254,14 @@ p span {
 }
 
 #wd {
-    font-size: 60px;
+    width:60px;
     margin-top: px;
     margin-bottom: 20px;
 }
 
 #lm {
-    font-size: 20px;
+    width:20px;
+   
     padding-right: 5px;
 }
 
@@ -350,7 +351,7 @@ p span {
 }
 
 #down {
-    font-size: 25px;
+    width: 25px;
     color: #000;
     padding-top: 10px;
 }
@@ -386,23 +387,26 @@ p span {
 #phone {
     color: red;
     padding-right: 2px;
-    font-size: 20px;
+    width: 20px;
 }
 
-.social-icon a {
+.social-icon a svg{
     text-decoration-color: none;
     font-size: 30px;
     color: #fff;
     padding-right: 15px;
     transition: transform 0.5s;
+    transform: translateY(0);
 }
 
-.social-icon a:hover {
+.social-icon a svg:hover {
     cursor: pointer;
     color: #ff004f;
-    transform: translateY(-15px);
+    transform: translateY(-5px);
 }
-
+#social{
+    width:35px;
+}
 .fa-brands {
     
     transition: transform 0.5s;
@@ -506,7 +510,8 @@ p span {
 }
 #heart{
     color: #ff004f;
-    
+    width:15px;
+    padding-top: 100x;
 }
 #education,#experience{
     display: none;
