--- a/responsive.css
+++ b/responsive.css
@@ -2,7 +2,7 @@
   display: none;  
 }
 @media only screen and (max-width:700px){
-    nav .fa-solid{
+    #menu-icon,#cross{
         display: block;  
       }
     .Navitems{
